--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
         <h3>$49</h3>
       </div>
       <div class="type-area">
-      <p> Type a message… <span> <i class="fa-sharp fa-solid fa-angle-right" id="fa-right"></i></span></p>
+      <p> Type a message… </p>
     </div>
       </div>
     </div>
